[package]
name = "es_search_query_procedural_macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "es_search_query_procedural_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.37"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
syn = { version = "2.0.90", features = ["full"] }
